--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ itoa = { version = "1.0", default-features = false }
 
 defmt = "0.3"
 defmt-rtt = "0.4"
-
+libm = "0.2.11"
 cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
 cortex-m-rt = "0.7.0"
 embedded-hal = "0.2.6"
